Added testing folder and POST functionality

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "node-todo-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +12,20 @@
     "express": "^4.14.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Chaotikaa/node-todo-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Chaotikaa/node-todo-api/issues"
+  },
+  "homepage": "https://github.com/Chaotikaa/node-todo-api#readme",
+  "description": "",
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2",
+    "supertest": "^2.0.0"
   }
 }
